--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
+    "moralis": "0.0.90",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^0.2.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
